Adds JUnit tests for some methods